@@ -119,6 +119,7 @@
 - mount_nfs.so to honor explicit NFSv4 requests.
 - mount_nfs.so fix port=0 option behavior v3.
 - documentation fix some typos and misleading comments.
+- fix master map bogus keywork match.
 
 28/06/2011 autofs-5.0.6
 -----------------------
@@ -203,6 +204,7 @@
 - add base64 password encode.
 - fix ipv6 name for lookup.
 - fix libtirpc ipv6 check.
+- fix non multi-mount recursive mounts.
 
 03/09/2009 autofs-5.0.5
 -----------------------
